--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,12 @@ header{
     font-size: 26px;
     text-transform: uppercase;
 }
+
+section h2{
+    text-transform: uppercase;
+}
+
+section p{
+    text-align: justify;
+}
+
