--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,10 @@ header{
     text-transform: uppercase;
 }
 
+section{
+    color: #FFF;
+}
+
 section h2{
     text-transform: uppercase;
 }
@@ -33,3 +37,28 @@ section p{
     text-align: justify;
 }
 
+.formContainer{
+    max-width: 230px;
+    background-color: #FFFFFFBB;
+    padding: 20px;
+    float: right;
+    color: #000;
+}
+
+.mb{
+    margin-bottom: 15px;
+}
+
+input, select{
+    width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    border: none;
+    margin-bottom: 10px;
+}
+
+input[type="submit"]{
+    color: white;
+    background-color: #48c5ce;
+    font-weight: bold;
+}
