--- a/css/style.css
+++ b/css/style.css
@@ -66,3 +66,46 @@ input[type="submit"]{
     background-color: #48c5ce;
     font-weight: bold;
 }
+
+select{
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    background-image: url('../imagens/arrow.jpg');
+    background-repeat: no-repeat;
+    background-position: calc(100% - 10px) center ;
+}
+
+
+
+footer{
+    background-color: #202121;
+    padding: 40px;
+    text-align: center;
+}
+
+.picture{
+    width: 160px;
+}
+
+.description{
+    display: inline-block;
+    text-align: left;
+    color: #FFF;
+    max-width: 40%;
+    margin-left: 40px;
+}
+
+.description p, .description h3{
+    margin-bottom: 20px;
+}
+
+.description h3{
+    font-size: 24px;
+}
+
+.description p{
+    letter-spacing: 1px;  
+    /* espaçamento das letras */
+}
+
